<resources>
    <string name="app_name">Arising Quests</string>
    <string name="importance_high">High</string>
    <string name="importance_mid">Mid</string>
    <string name="importance_low">Low</string>
    <string name="due_date">Due Date</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="title">Title (Required)</string>
    <string name="importance">Importance</string>
    <string name="edit_task_header">Task</string>
    <string name="add_substeps">Add Substep</string>
    <string name="enter_step">Enter Substep</string>
    <string name="add">Add</string>
    <string name="Clear">Clear</string>
    <string name="lifeLineButton" translatable="false">988lifeline.org</string>
    <string name="lifeLineImg">LifeLine</string>
    <string name="buttonCard" translatable="false">mentalhealthhelp.carrd.co/#feelbetter</string>
    <string name="cardImg">cardImage</string>
    <string name="takeThisimg">takeThisImg</string>
    <string name="takeThisButton" translatable="false">takethis.org</string>
    <string name="_988_suicide_lifeline">988 Suicide Lifeline</string>
    <string name="mental_health_card">Mental Health Card</string>
    <string name="take_this">Take This</string>
    <string name="_988_lifeline">988 LifeLine</string>
    <string name= "Sunday">Su</string>
    <string name= "Monday">Mo</string>
    <string name= "Tuesday">Tu</string>
    <string name= "Wednesday">We</string>
    <string name= "Thursday">Th</string>
    <string name= "Friday">Fr</string>
    <string name= "Saturday">Sa</string>
    <string name="mental_resources">Mental Health</string>
    <string name="create_task">Create New Task</string>
    <string name="view_mental_health">Go to Mental Health View</string>
    <string name="view_calendar">View Task Calendar</string>
    <string name="edit_task_final">Edit Task: Study for Final</string>
    <string name="home">Home</string>

</resources>