<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/editTaskContent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cornsilk"
    tools:context=".EditTaskActivity">



    <androidx.appcompat.widget.Toolbar
        android:id="@+id/editTaskToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@id/tableLayout"/>


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/editTaskToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_task_header"
                android:textAlignment="center"
                android:textColor="@color/pakistan_green"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:gravity="center_horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/filledTextFieldTitle"
                style="?attr/textInputFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                app:boxBackgroundColor="@color/background_box_tint"
                tools:ignore="ExtraText">
                app:helperTextEnabled="true"
                app:helperText="@string/helper_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputTitle"
                    android:layout_width="271dp"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName|textCapWords" />

            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:gravity="center">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/importance"
                android:textSize="16dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:gravity="center_horizontal">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/radio_button_1"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonHigh"
                    android:layout_width="88dp"
                    android:layout_height="match_parent"
                    android:buttonTint="@color/importance_high"
                    android:text="@string/importance_high" />

                <RadioButton
                    android:id="@+id/radioButtonMid"
                    android:layout_width="94dp"
                    android:layout_height="match_parent"
                    android:buttonTint="@color/importance_mid"
                    android:text="@string/importance_mid" />

                <RadioButton
                    android:id="@+id/radioButtonLow"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:buttonTint="@color/importance_low"
                    android:text="@string/importance_low" />
            </RadioGroup>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:gravity="center_horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/filledTextFieldDueDate"
                style="?attr/textInputFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/due_date"
                app:boxBackgroundColor="@color/background_box_tint"
                tools:ignore="ExtraText">
                app:helperTextEnabled="true"
                app:helperText="@string/helper_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputDueDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="date" />

            </com.google.android.material.textfield.TextInputLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:gravity="center_horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/filledTextFieldDescription"
                style="?attr/textInputFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                app:boxBackgroundColor="@color/background_box_tint"
                tools:ignore="ExtraText">
                app:helperTextEnabled="true"
                app:helperText="@string/helper_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text|textLongMessage|textImeMultiLine|textMultiLine" />

            </com.google.android.material.textfield.TextInputLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <include
                android:id="@+id/substepView"
                layout="@layout/substep"/>


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/elevatedButtonAddSubsteps"
                style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"

                android:text="@string/add_substeps"
                android:textColor="@color/black"
                app:icon="@drawable/baseline_add_24"
                app:iconTint="@color/pakistan_green"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
        </TableRow>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/elevatedButtonCancel"
                style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@color/pakistan_green"
                android:text="@string/cancel"
                android:textColor="@color/cornsilk"
                app:icon="@drawable/baseline_cancel_24"
                app:iconTint="@color/background_box_tint"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

            <Button
                android:id="@+id/elevatedButtonSave"
                style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@color/pakistan_green"
                android:text="@string/save"
                android:textColor="@color/cornsilk"
                app:icon="@drawable/baseline_save_24"
                app:iconTint="@color/background_box_tint"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

        </LinearLayout>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>