<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editTaskDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cornsilk"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".EditTaskDialog">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/editTaskToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:text="@string/edit_task_header"
                    android:textAlignment="center"
                    android:textColor="@color/pakistan_green"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:gravity="center_horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/filledTextFieldTitle"
                    style="?attr/textInputFilledStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    app:boxBackgroundColor="@color/background_box_tint"
                    tools:ignore="ExtraText">
                    app:helperTextEnabled="true"
                    app:helperText="@string/helper_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName|textCapWords" />

                </com.google.android.material.textfield.TextInputLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:gravity="center_horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/filledTextFieldDescription"
                    style="?attr/textInputFilledStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    app:boxBackgroundColor="@color/background_box_tint"
                    tools:ignore="ExtraText">
                    app:helperTextEnabled="true"
                    app:helperText="@string/helper_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="text|textLongMessage" />

                </com.google.android.material.textfield.TextInputLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:gravity="center_horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/filledTextFieldDueDate"
                    style="?attr/textInputFilledStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/due_date"
                    app:boxBackgroundColor="@color/background_box_tint"
                    tools:ignore="ExtraText">
                    app:helperTextEnabled="true"
                    app:helperText="@string/helper_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputDueDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="datetime|date" />

                </com.google.android.material.textfield.TextInputLayout>

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/importance"
                    android:textSize="16dp" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginHorizontal="5dp"
                android:gravity="center|center_horizontal">

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:checkedButton="@+id/radio_button_1"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButtonHigh"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="3dp"
                        android:backgroundTint="@color/importance_high"
                        android:backgroundTintMode="src_atop"
                        android:text="@string/importance_high" />

                    <RadioButton
                        android:id="@+id/radioButtonMid"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="3dp"
                        android:backgroundTint="@color/importance_mid"
                        android:backgroundTintMode="src_atop"
                        android:text="@string/importance_mid" />

                    <RadioButton
                        android:id="@+id/radioButtonLow"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="3dp"
                        android:backgroundTint="@color/importance_low"
                        android:backgroundTintMode="src_atop"
                        android:text="@string/importance_low" />
                </RadioGroup>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="5dp"
                android:gravity="center_horizontal">

                <include
                    android:id="@+id/content"
                    layout="@layout/content_substep" />


            </TableRow>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/elevatedButtonAddSubsteps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:backgroundTint="@color/background_box_tint"
                    android:text="@string/add_substeps"
                    android:textColor="@color/black"
                    tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/elevatedButtonCancel"
                    style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:backgroundTint="@color/pakistan_green"
                    android:onClick="clearClicked"
                    android:text="@string/Clear"
                    android:textColor="@color/cornsilk"
                    app:icon="@drawable/baseline_cancel_24"
                    app:iconTint="@color/background_box_tint"
                    tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

                <Button
                    android:id="@+id/elevatedButtonSave"
                    style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:backgroundTint="@color/pakistan_green"
                    android:onClick="saveClicked"
                    android:text="@string/save"
                    android:textColor="@color/cornsilk"
                    app:icon="@drawable/baseline_save_24"
                    app:iconTint="@color/background_box_tint"
                    tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

            </LinearLayout>
        </TableLayout>
    </ScrollView>

</LinearLayout>